<resources>
  <string name="app_name">Activity Monitor</string>

  <!--  Main screen -->
  <string name="navigation_title_home">Home</string>
  <string name="navigation_title_todays_activities">Today</string>
  <string name="navigation_title_log">Log</string>

  <string name="action_record_walking">I moved</string>
  <string name="action_sync_to_cloud">Sync to cloud</string>
  <string name="action_vibrate">Test vibration</string>
  <string name="action_notify">Test notification</string>
  <string name="action_settings">Settings</string>
  <string name="action_about">About</string>

  <string name="main_activity_do_not_disturb_on">\n\n<b>Do Not Disturb is ON.</b>\n\nYou will NOT receive reminders to move.</string>
  <string name="main_activity_do_not_disturb_off">\n\nDo Not Disturb mode is <b>OFF</b>.</string>
  <string name="main_activity_version">Version</string>
  <string name="main_activity_movement_item">"%1$s %2$s for %3$s minutes\n"</string>
  <string name="main_activity_start_snooze">Snooze reminders</string>
  <string name="main_activity_cancel_snooze">Cancel snooze</string>
  <string name="main_activity_snooze_reminders_for">Snooze Reminders For</string>
  <string name="main_activity_snooze_status">Reminders snoozed until %1$s</string>

  <!-- Notifications -->
  <string name="notification_move_channel_name">Move Reminders</string>
  <string name="notification_move_channel_description">Move when you\'ve been still for too long</string>
  <string name="notification_status_channel_name">Current activity</string>
  <string name="notification_status_channel_description">Shows what your activity currently is</string>
  <string name="notification_time_to_move_title">Time to move!</string>
  <string name="notification_current_activity_title">Current activity</string>
  <string name="notification_current_activity_text">%1$s</string>
  <string name="notification_snooze_15_mins">snooze15</string>
  <string name="notification_snooze_30_mins">snooze30</string>
  <string name="notification_snooze_1_hour">snooze1hour</string>

  <!-- Event types-->
  <string name="event_type_in_vehicle">IN VEHICLE</string>
  <string name="event_type_on_bicycle">ON BICYCLE</string>
  <string name="event_type_on_foot">ON FOOT</string>
  <string name="event_type_still">STILL</string>
  <string name="event_type_walking">WALKING</string>
  <string name="event_type_running">RUNNING</string>
  <string name="event_type_unknown">UNKNOWN</string>
  <string name="event_type_end">END</string>

  <!--  Settings-->
  <string name="settings_reminder_when_category">When to remind</string>
  <string name="settings_reminder_how_category">How to remind</string>
  <string name="settings_reminder_smart_start">Smart start</string>
  <string name="settings_reminder_smart_start_summary_on">Start reminding the first time you move after the Start time (see below)</string>
  <string name="settings_reminder_smart_start_summary_off">Start reminding at Start time (see below)</string>
  <string name="settings_reminder_notification">Notify</string>
  <string name="settings_reminder_notification_summary_on">ON, Remind using notifications</string>
  <string name="settings_reminder_notification_summary_off">OFF, Don\'t use notifications to remind</string>
  <string name="settings_reminder_customize_notification">Notification behavior</string>
  <string name="settings_reminder_customize_notification_summary">Customize sound, and other behaviors</string>
  <string name="settings_reminder_vibrate">Vibrate</string>
  <string name="settings_reminder_vibrate_summary_on">ON, Remind using vibrations</string>
  <string name="settings_reminder_vibrate_summary_off">OFF, Don\'t use vibrations to remind</string>
  <string name="settings_reminder_start">Start time</string>
  <string name="settings_reminder_end">End time</string>
  <string name="settings_reminder_interval_seconds">Seconds between reminders</string>
  <string name="settings_reminder_max_still_minutes">Minutes still before reminder</string>

  <!--  Snooze-->
  <string name="snooze_15_minutes">15 mins</string>
  <string name="snooze_30_minutes">30 mins</string>
  <string name="snooze_45_minutes">45 mins</string>
  <string name="snooze_1_hour">1 hour</string>
  <string name="snooze_2_hours">2 hours</string>
  <string name="snooze_4_hours">4 hours</string>
  <string name="snooze_6_hours">6 hours</string>
  <string name="snooze_8_hours">8 hours</string>
  <string name="snooze_10_hours">10 hours</string>
  <string name="snooze_12_hours">12 hours</string>
  <string name="action_test_reminder">Test reminder</string>

  <!-- Run-time permissions -->
  <string name="permission_rationale_activity">This permission is required to remind you to move throughout the day</string>
  <string name="permission_rationale_phone_state">This permission is required to prevent alerts while you are on a call</string>
</resources>
