<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_record_walking"
      android:title="@string/action_record_walking"
      app:showAsAction="never"
      />

  <item
      android:id="@+id/action_sync_to_cloud"
      android:title="@string/action_sync_to_cloud"
      app:showAsAction="never"
      />

  <item
      android:id="@+id/action_vibrate"
      android:title="@string/action_vibrate"
      app:showAsAction="never"
  />

  <item
      android:id="@+id/action_notify"
      android:title="@string/action_notify"
      app:showAsAction="never"
  />

  <item
      android:id="@+id/action_settings"
      android:title="@string/action_settings"
      app:showAsAction="never"
  />

</menu>
